test/corpus/kwdpaths.txt
===
Keyword paths
===

foo:bar
foo:bar:baz

---

(source
  (symbind
    form: (symbol)
    keyword: (keyword))
  (symbind
    form:
      (symbind
        form: (symbol)
        keyword: (keyword))
    keyword: (keyword)))
